--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'java'
-    id 'maven'
+    id 'maven-publish'
 }
 
 group = 'ru.ealone.gradle.plugins'
@@ -14,45 +14,53 @@ task javadocJar(type: Jar) {
     from javadoc
 }
 
-task sourcesJar(type: Jar) {
+task sourcesJar(type: Jar, dependsOn: classes) {
     classifier = 'sources'
     from sourceSets.main.allSource
 }
 
-uploadArchives {
+publishing{
+    publications{
+        SourcesJar(MavenPublication){
+            from components.java
+            artifact sourcesJar
+            artifactId = "version-info"
+            pom{
+                name        = "VersionInfo"
+                packaging   = "jar"
+                description = "Generate version from version.properties file"
+                url         = "https://github.com/EAlOne/version-info"
 
-    repositories {
-
-        mavenInstaller {
-
-            pom.project {
-                name 'VersionInfo'
-                packaging 'jar'
-                description 'Generate version from version.properties file'
-                url 'https://github.com/EAlOne/version-info'
-
-                scm {
-                    url 'https://github.com/EAlOne/version-info'
+                developers {
+                    developer {
+                        id      = "ealone"
+                        name    = "Evgeniy Alexandrovich"
+                        email   = "evgeniy.ea@gmail.com"
+                    }
                 }
 
                 licenses {
                     license {
-                        name 'The Apache License, Version 2.0'
-                        url 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+                        name    = "The Apache License, Version 2.0"
+                        url     = "http://www.apache.org/licenses/LICENSE-2.0.txt"
                     }
                 }
 
-                developers {
-                    developer {
-                        id 'ealone'
-                        name 'Evgeniy Alexandrovich'
-                        email 'evgeniy.ea@gmail.com'
-                    }
+                scm {
+                    url = "https://github.com/EAlOne/version-info"
                 }
             }
         }
     }
+    repositories {
+        maven{
+            name = "LocalVcsRepo"
+            url = System.getProperty("user.home") + "/projects/java/vcs-repo"
+        }
+    }
 }
+
+tasks.withType(AbstractPublishToMaven){ it.dependsOn test}
 
 repositories {
     mavenCentral()
@@ -60,8 +68,6 @@ repositories {
 
 dependencies {
     compile gradleApi()
-
-    // https://mvnrepository.com/artifact/org.jetbrains/annotations
     compile group: 'org.jetbrains', name: 'annotations', version: '16.0.2'
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
